--- a/index.html
+++ b/index.html
@@ -6,15 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plugins</title>
+    <style>
+        .btn {
+            transition: box-shadow .2s;
+            display: inline-block;
+            padding: 0.5em 1em;
+            color: #fff;
+            text-decoration: none;
+        }
+
+        .box {
+            padding: 16px;
+            border-bottom: 1px solid #999;
+        }
+    </style>
 </head>
 
 <body>
     <div id="app">
-        <div v-for="(item,index) of list" :key="index" style="padding:16px;border-bottom: 1px solid #999;">
+        <div class="box">
+            <h1>Tampermonkey</h1>
+            <a href="https://www.tampermonkey.net/" target="_blank" class="btn"
+                style="background-color: #67C23A;">安装插件</a>
+        </div>
+        <div v-for="(item,index) of list" :key="index" class="box">
             <h2>{{item.name}}</h2>
             <div style="margin-bottom: 16px;">{{item.desc}}</div>
-            <a :href="item.path"
-                style="transition: box-shadow .2s;display: inline-block;background-color: #409EFF;padding: 0.5em 1em;color: #fff;text-decoration: none;">
+            <a :href="item.path" target="_blank" class="btn" style="background-color: #409EFF;">
                 安装脚本
             </a>
         </div>
