--- a/index.html
+++ b/index.html
@@ -7,37 +7,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plugins</title>
     <style>
+        #app {
+            display: flex;
+            flex-wrap: wrap;
+        }
+
         .btn {
             transition: box-shadow .2s;
             display: inline-block;
             padding: 0.5em 1em;
             color: #fff;
             text-decoration: none;
+            border-radius: 4px;
         }
 
         .box {
             padding: 16px;
-            border-bottom: 1px solid #999;
+            display: flex;
+            width: 230px;
+            height: 150px;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            border: 1px solid #D4D7DE;
+            border-radius: 4px;
+            margin-right: 16px;
+            margin-bottom: 16px;
+            box-shadow: 0 2px 4px rgb(0 0 0 / 12%), 0 0 6px rgb(0 0 0 / 4%);
         }
     </style>
 </head>
 
 <body>
     <div id="app">
+        <div style="width:100%;display:flex;justify-content: center;font-size: 40px;font-weight: 600;">
+            辣子鸡的插件仓库
+        </div>
         <div class="box">
             <h1>Tampermonkey</h1>
             <a href="https://www.tampermonkey.net/" target="_blank" class="btn"
                 style="background-color: #67C23A;">安装插件</a>
         </div>
         <div v-for="(item,index) of list" :key="index" class="box">
-            <h2>{{item.name}}</h2>
+            <h1>{{item.name}}</h1>
             <div style="margin-bottom: 16px;">{{item.desc}}</div>
             <a :href="item.path" target="_blank" class="btn" style="background-color: #409EFF;">
                 安装脚本
             </a>
         </div>
         <div class="box">
-            <h2>更多</h2>
+            <h1>更多脚本</h1>
             <a v-for="(item,index) of links" :key="index" :href="item" target="_blank"
                 style="margin-bottom: 8px;">{{item}}</a>
         </div>
