--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
             <div class="box">
                 <div class="sub-title">Tampermonkey</div>
                 <a href="https://www.tampermonkey.net/" target="_blank" class="btn"
-                    style="background-color: #67C23A;">安装插件</a>
+                    style="background-color: #67C23A;">安装</a>
             </div>
             <div v-for="(item,index) of list" :key="index" class="box">
                 <div class="sub-title">{{item.name}}</div>
                 <div style="margin-bottom: 16px;">{{item.desc}}</div>
                 <a :href="item.path" target="_blank" class="btn" style="background-color: #409EFF;">
-                    安装脚本
+                    安装
                 </a>
             </div>
         </div>
